# bubbles

./: .gitignore  Bubble.qml  BubblesLayout.qml  BublesApp.pro  CMakeLists.txt  Info.plist  README.md  Wall.qml  build-ios.sh  build-mac.sh  build-universal.sh  build.sh  images.qrc  main.cpp  main.qml  qml.qrc  setup-linux.sh  setup-windows.ps1  setup.sh
.github/workflows/: linux_desktop_build.yml  mac_os_build.yml  release.yml  test-build.yml  web-asm.yml
shared/: ImageBoxBody.qml  PhysicsItem.qml  RectangleBoxBody.qml
